@@ -3,23 +3,25 @@ package gov.nasa.jpl.ammos.mpsa.aerie.merlinmultimissionmodels.geometry.StateMod
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinmultimissionmodels.data.StateModels.BinModel;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinmultimissionmodels.data.StateModels.InstrumentModel;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.activities.Activity;
-import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.activities.annotations.ActivityType;
-import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.ActivityJob;
-import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationContext;
+import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.DynamicCell;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationEngine;
-import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationInstant;
-import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.states.StateContainer;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.states.interfaces.State;
+import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.time.Duration;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.time.Instant;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.time.TimeUnit;
 import org.junit.Test;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
+
+import static gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationEffects.delay;
+import static gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationEffects.spawn;
+import static gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationEffects.withEffects;
 
 public class DataModelTest {
 
-    public class DataModelStates implements StateContainer {
+    public static final class DataModelStates {
         public final InstrumentModel instrument_a_data_rate = new InstrumentModel("instrument 1", 0.0);
         public final InstrumentModel instrument_b_data_rate = new InstrumentModel("instrument 2", 0.0);
         public final InstrumentModel instrument_c_data_rate = new InstrumentModel("instrument 3", 0.0);
@@ -31,47 +33,55 @@ public class DataModelTest {
         public final BinModel bin_2 = new BinModel("Bin 2", instrument_c_data_rate, instrument_d_data_rate);
         public final BinModel bin_3 = new BinModel("Bin 3", instrument_e_data_rate, instrument_f_data_rate, instrument_g_data_rate);
 
+        private final List<State<?>> stateList = List.of(
+            instrument_a_data_rate, instrument_b_data_rate, instrument_c_data_rate, instrument_d_data_rate,
+            instrument_e_data_rate, instrument_f_data_rate, instrument_g_data_rate, bin_1, bin_2, bin_3);
+
+        public DataModelStates(final Instant startTime) {
+            for (final var state : this.stateList) state.initialize(startTime);
+        }
+
         public List<State<?>> getStateList() {
-            return List.of(instrument_a_data_rate, instrument_b_data_rate, instrument_c_data_rate, instrument_d_data_rate,
-                    instrument_e_data_rate, instrument_f_data_rate, instrument_g_data_rate, bin_1, bin_2, bin_3);
+            return Collections.unmodifiableList(this.stateList);
         }
     }
 
+    private static final DynamicCell<DataModelStates> statesRef = DynamicCell.inheritableCell();
 
     /* --------------------------------- DATA MODEL SAMPLE ACTIVITIES ------------------------------------*/
-    @ActivityType(name="InitBinDataVolumes", states=DataModelStates.class)
-    public static class InitBinDataVolumes implements Activity<DataModelStates>{
+    public static class InitBinDataVolumes implements Activity {
 
 
         @Override
-        public void modelEffects(SimulationContext ctx, DataModelStates states){
+        public void modelEffects() {
 
+            final var states = statesRef.get();
             states.bin_1.initializeBinData();
             states.bin_2.initializeBinData();
             states.bin_3.initializeBinData();
         }
     }
 
-    @ActivityType(name="TurnInstrumentAOn", states=DataModelStates.class)
-    public static class TurnInstrumentAOn implements Activity<DataModelStates> {
+    public static class TurnInstrumentAOn implements Activity {
 
         @Override
-        public void modelEffects(SimulationContext ctx, DataModelStates states){
+        public void modelEffects() {
 
-            ctx.delay(1, TimeUnit.HOURS);
+            final var states = statesRef.get();
+            delay(1, TimeUnit.HOURS);
 
             InstrumentModel some_a_instrument = states.instrument_a_data_rate;
             some_a_instrument.set(10.0);
         }
     }
 
-    @ActivityType(name="DownlinkData", states=DataModelStates.class)
-    public static class DownlinkData implements Activity<DataModelStates>{
+    public static class DownlinkData implements Activity {
 
         @Override
-        public void modelEffects(SimulationContext ctx, DataModelStates states){
+        public void modelEffects(){
 
-            ctx.delay(2, TimeUnit.HOURS);
+            final var states = statesRef.get();
+            delay(2, TimeUnit.HOURS);
 
             states.bin_1.downlink();
 
@@ -83,130 +93,45 @@ public class DataModelTest {
     /*----------------------------------------------------------------------------------------------------*/
 
     @Test
-    public void basic_sim_test(){
-
-        Instant simStart = SimulationInstant.fromQuantity(0, TimeUnit.MICROSECONDS);
-
-        InitBinDataVolumes binDataVolumes = new InitBinDataVolumes();
-        TurnInstrumentAOn instrumentAOnAct = new TurnInstrumentAOn();
-
-
-        ActivityJob<DataModelStates> instrumentOn= new ActivityJob<>(instrumentAOnAct, simStart);
-        ActivityJob<DataModelStates> binData = new ActivityJob<>(binDataVolumes, simStart);
-
-        List<ActivityJob<?>> activityJobList = new ArrayList<>();
-
-        activityJobList.add(instrumentOn);
-        activityJobList.add(binData);
-
-        DataModelStates states = new DataModelStates();
-
-        SimulationEngine engine = new SimulationEngine(simStart, activityJobList, states);
-
-        engine.simulate();
-
-        System.out.println(engine.getCurrentSimulationTime());
-
-    }
-
-    @Test
     public void bin_initialization() {
+        final var simEngine = new SimulationEngine();
 
-        System.out.println("\nBin Initialization test start");
+        final var states = new DataModelStates(simEngine.getCurrentTime());
+        final Function<Runnable, Runnable> taskDecorator = (task) ->
+            () -> statesRef.setWithin(states, task::run);
 
-        Instant simStart = SimulationInstant.fromQuantity(0, TimeUnit.MICROSECONDS);
-
-        InitBinDataVolumes binDataVolumes = new InitBinDataVolumes();
-        ActivityJob<DataModelStates> binDataInit = new ActivityJob<>(binDataVolumes, simStart);
-
-        List<ActivityJob<?>> activityJobList = new ArrayList<>();
-        activityJobList.add(binDataInit);
-
-
-        DataModelStates states = new DataModelStates();
-
-        SimulationEngine engine = new SimulationEngine(simStart, activityJobList, states);
-        engine.simulate();
-
-        states.bin_1.printHistory();
-        states.bin_2.printHistory();
-        states.bin_3.printHistory();
-        System.out.println("Bin Initialization test end\n");
-        //add assert statements*/
-
-        /*--------------------------------*/
-
-
-
+        simEngine.scheduleJobAfter(Duration.ZERO, withEffects(taskDecorator, () -> spawn(new InitBinDataVolumes())));
+        simEngine.runToCompletion();
     }
 
     @Test
     public void turn_instrument_on(){
+        final var simEngine = new SimulationEngine();
 
-        System.out.println("\nTurn instrument on test start");
+        final var states = new DataModelStates(simEngine.getCurrentTime());
+        final Function<Runnable, Runnable> taskDecorator = (task) ->
+            () -> statesRef.setWithin(states, task::run);
 
-        Instant simStart = SimulationInstant.fromQuantity(0, TimeUnit.MICROSECONDS);
-
-        InitBinDataVolumes binDataVolumes = new InitBinDataVolumes();
-        ActivityJob<DataModelStates> binDataInit = new ActivityJob<>(binDataVolumes, simStart);
-
-        List<ActivityJob<?>> activityJobList = new ArrayList<>();
-        activityJobList.add(binDataInit);
-
-
-        DataModelStates states = new DataModelStates();
-
-        TurnInstrumentAOn instrumentAOnAct = new TurnInstrumentAOn();
-        ActivityJob<DataModelStates> instrumentOn= new ActivityJob<>(instrumentAOnAct, simStart);
-        activityJobList.add(instrumentOn);
-
-        SimulationEngine  engine = new SimulationEngine(simStart, activityJobList, states);
-        engine.simulate();
-
-        states.bin_1.printHistory();
-        states.bin_2.printHistory();
-        states.bin_3.printHistory();
-
-        states.instrument_a_data_rate.printHistory();
-
-        System.out.println("Turn instrument on test end\n");
+        simEngine.scheduleJobAfter(Duration.ZERO, withEffects(taskDecorator, () -> {
+            spawn(new InitBinDataVolumes());
+            spawn(new TurnInstrumentAOn());
+        }));
+        simEngine.runToCompletion();
     }
 
     @Test
     public void downlink_data(){
+        final var simEngine = new SimulationEngine();
 
-        System.out.println("\nTurn instrument on test start");
+        final var states = new DataModelStates(simEngine.getCurrentTime());
+        final Function<Runnable, Runnable> taskDecorator = (task) ->
+            () -> statesRef.setWithin(states, task::run);
 
-        Instant simStart = SimulationInstant.fromQuantity(0, TimeUnit.MICROSECONDS);
-
-        //Create activities
-        InitBinDataVolumes binDataVolumes = new InitBinDataVolumes();
-        ActivityJob<DataModelStates> binDataInit = new ActivityJob<>(binDataVolumes, simStart);
-
-        TurnInstrumentAOn instrumentAOnAct = new TurnInstrumentAOn();
-        ActivityJob<DataModelStates> instrumentOn= new ActivityJob<>(instrumentAOnAct, simStart);
-
-        DownlinkData downlinkData = new DownlinkData();
-        ActivityJob<DataModelStates> downlinkAct = new ActivityJob<>(downlinkData, simStart);
-
-
-        List<ActivityJob<?>> activityJobList = new ArrayList<>();
-        activityJobList.add(binDataInit);
-        activityJobList.add(instrumentOn);
-        activityJobList.add(downlinkAct);
-
-        DataModelStates states = new DataModelStates();
-
-        SimulationEngine  engine = new SimulationEngine(simStart, activityJobList, states);
-        engine.simulate();
-
-        states.bin_1.printHistory();
-        states.bin_2.printHistory();
-        states.bin_3.printHistory();
-
-        states.instrument_a_data_rate.printHistory();
-
-        System.out.println("Turn instrument on test end\n");
-
+        simEngine.scheduleJobAfter(Duration.ZERO, withEffects(taskDecorator, () -> {
+            spawn(new InitBinDataVolumes());
+            spawn(new TurnInstrumentAOn());
+            spawn(new DownlinkData());
+        }));
+        simEngine.runToCompletion();
     }
 }
